docs: schedule routes documentation
