# backend/internal/handlers/error.go
@@ -1,0 +1,5 @@
+package handlers
+
+type ErrorResponse struct {
+    Code int `json:"code" example:"1" enums:"1,2"`
+}
